--- a/scss/globals/_index.scss
+++ b/scss/globals/_index.scss
@@ -15,11 +15,11 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #343439;
+  background: #202024;
   border-radius: 3px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #5E5E63;
+  background: #343439;
 }
