--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -26,9 +26,16 @@ body {
 //  text-decoration: none;
 //}
 
+.homelink {
+  text-decoration: none;
+  width: 50vw;
+  margin-right: 50vw;
+}
+
 .title {
   transition: all 250ms ease-in-out;
-  width: 50vw;
+  width: 50%;
+  margin-right: 50vw;
   &:hover {
     transform: scale(1.05);
   }
@@ -55,7 +62,7 @@ h1 {
   margin-bottom: 0px;
   margin-left: 15vw;
   width: 12.5vw;
-  height: 0.4em;
+  height: 0.4%;
   background-color: #623CEA;
 
 }
@@ -71,4 +78,21 @@ h2 {
   font-stretch: ultra-expanded;
   word-spacing: 0.1em;
   width: 50vw;
+}
+
+.indextext {
+  margin-top: 2vh;
+  color: #F7F7FF;
+  font-family: 'Exo 2', sans-serif;
+  font-size: 0.9em;
+  padding-left: 15vw;
+  line-height: 2;
+}
+
+.footer {
+  color: #2AB7CA;
+  text-align: center;
+  font-family: 'Muli';
+  font-weight: 300;
+  font-size: 0.75em;
 }
